# solo-6600006

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  models.rs  services.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BandwidthStrategyPanel.tsx  ConflictResolutionCenter.tsx  CreateWorkspaceModal.tsx  DailySyncReportPanel.tsx  DeviceHealthPanel.tsx  DeviceOnboardingWizard.tsx  DevicePanel.tsx  DirectorySnapshotPanel.tsx  FileList.tsx  IgnoreRulesPanel.tsx  LargeFileTransferPanel.tsx  MemberPanel.tsx  NotificationCenter.tsx  NotificationItem.tsx  OfflineSyncPanel.tsx  RecycleBinPanel.tsx  SensitiveProtectionPanel.tsx  ShareAccessPage.tsx  ShareLinksPanel.tsx  StorageAnalysisPanel.tsx  SyncActivityPanel.tsx  SyncSchedulePanel.tsx  SyncTemplatePanel.tsx  VersionComparePanel.tsx  VersionHistoryPanel.tsx  WorkspaceActivityPanel.tsx  WorkspaceDetail.tsx  WorkspaceList.tsx  WorkspacePanel.tsx
frontend/src/hooks/: useNetworkStatus.ts
frontend/src/store/: sync.ts
frontend/src/types/: index.ts
frontend/src/utils/: offlineStorage.ts  versionUtils.ts
